main/default/objects/Participant_Milestone_Metric__c/Participant_Milestone_Metric__c.object-meta.xml
<CustomObject>
    <description>Tracks the progress of participants milestone</description>
    <label>Participant Milestone Metric</label>
    <nameField>
        <displayFormat>PMM-{0000000}</displayFormat>
        <label>Participant Milestone Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Milestone Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>