main/default/objects/Participant_Milestone_Metric__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Metric Completion Date</description>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>