main/default/objects/Participant_Milestone_Metric__c/fields/Metric_Reset__c.field-meta.xml
<CustomField>
    <fullName>Metric_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the metric was reset by BatchUpdateParentMilestoneProgress</description>
    <label>Metric Reset</label>
    <type>Checkbox</type>
</CustomField>