main/default/objects/Participant_Milestone_Metric__c/fields/Metric_Used__c.field-meta.xml
<CustomField>
    <fullName>Metric_Used__c</fullName>
    <description>Metric Used</description>
    <label>Metric Used</label>
    <length>50</length>
    <type>Text</type>
</CustomField>