main/default/objects/Participant_Milestone_Metric__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>Participants Milestone</description>
    <label>Milestone</label>
    <referenceTo>Participant_Milestone__c</referenceTo>
    <relationshipLabel>Participant Milestone Metrics</relationshipLabel>
    <relationshipName>Participant_Milestone_Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>